--- a/src/app/features/profile/profile.scss
+++ b/src/app/features/profile/profile.scss
@@ -59,6 +59,10 @@
 .tab-body {
   display: flex;
   flex-direction: column;
+
+  @media (pointer: coarse) {
+    min-height: 60vh;
+  }
 }
 
 @media (min-width: 768px) {
